# beanpicker

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
crates/beanpicker-gtfs/: Cargo.toml
crates/beanpicker-gtfs/src/: lib.rs  notice.rs  repair.rs  scan.rs  semantics.rs
crates/beanpicker-py/: Cargo.toml
crates/beanpicker-py/src/: lib.rs
docs/: conf.py  index.rst  installation.md  quickstart.md  reference.rst  requirements.txt
python/beanpicker/: __init__.py  exceptions.py
python/beanpicker/catalog/: __init__.py  _client.py  _csv.py  _models.py
python/beanpicker/gtfs/: __init__.py  _crop.py
python/beanpicker/pipeline/: __init__.py  _fetch.py
python/beanpicker/repair/: __init__.py  _repair.py
python/beanpicker/report/: __init__.py  _report.py
python/beanpicker/validate/: __init__.py  _structure.py
python/transitio/: __init__.py  _cli.py  exceptions.py
python/transitio/edit/: __init__.py  _editor.py
python/transitio/gui/: __init__.py  _app.py
tests/: test_catalog.py  test_crop.py  test_edit.py  test_gui.py  test_package.py  test_pipeline.py  test_repair.py  test_report.py  test_validate.py
