[package]
name = "beanpicker-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
beanpicker-gtfs = { path = "../beanpicker-gtfs" }
chrono = { workspace = true }
pyo3 = { workspace = true }
serde_json = { workspace = true }
